--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-three/drei": "^9.120.5",
+    "@react-three/fiber": "^8.17.10",
     "@types/styled-components": "^5.1.34",
+    "@types/three": "^0.171.0",
     "expo": "~52.0.23",
     "expo-status-bar": "~2.0.0",
     "lucide-react": "^0.469.0",
@@ -19,7 +22,8 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-web": "~0.19.13",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
