--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: 75-hard
     buildCommand: npm install && npm run build
-    staticPublishPath: ./dist
+    staticPublishPath: ./web-build  # Changed from ./dist
     pullRequestPreviewsEnabled: true
     headers:
       - path: /*
