--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve": "npx serve web-build"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@expo/metro-runtime": "~4.0.0",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@types/styled-components": "^5.1.34",
