--- a/package.json
+++ b/package.json
@@ -7,28 +7,29 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "npx expo export:web",
-    "serve": "npx serve web-build"
+    "build": "npx expo export:web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.0",
-    "@expo/metro-runtime": "~4.0.0",
+    "@expo/metro-runtime": "~3.1.1",
+    "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@types/styled-components": "^5.1.34",
-    "expo": "~52.0.23",
-    "expo-status-bar": "~2.0.0",
+    "expo": "~49.0.15",
+    "expo-status-bar": "~1.6.0",
     "lucide-react": "^0.469.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-web": "~0.19.13",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-web": "~0.19.6",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
-    "serve": "^14.2.4",
+    "@types/react": "~18.2.14",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "private": true
 }
