--- a/package.json
+++ b/package.json
@@ -10,26 +10,23 @@
     "build": "npx expo export:web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.1",
+    "@expo/metro-runtime": "~1.0.0",
     "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@types/styled-components": "^5.1.34",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~48.0.17",
+    "expo-status-bar": "~1.4.4",
     "lucide-react": "^0.469.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-web": "~0.19.6",
+    "react-native": "0.71.8",
+    "react-native-web": "~0.18.10",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~18.2.14",
-    "typescript": "^5.3.3"
-  },
-  "engines": {
-    "node": ">=16.0.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.14",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
